Fix for #33678 - Windows dead key accented chars #33709

Closed
opened 2012-12-31 00:05:33 +01:00 by Harley Acheson · 7 comments
Member

%%%Some Windows keyboard layouts have "dead keys" that you press to alter the key that follows. For example the "US (International)" keyboard layout allows you to press the double-quote key and then "e" to get an "e" with a umlaut, or the "^" then "e" to get an "e" with a circumflex. This type of layout comes in handy when you need to enter accented characters occasionally but you don't have a physical keyboard with those keys. The only downside is that you (usually) have to press that dead key twice to get the actual key (the double-quote or caret in these examples).

Our current text processing does not support the entry of accented characters when these types of keyboard layouts are selected. In fact in those cases the dead character is actually swallowed up, so you can't even enter a double-quote character. This is the problem reported in bug report #33678.

This patch fixes both issues. You can use dead keys to enter accented characters and you can get press the dead key twice to get that character.

It works ALMOST exactly the same as other programs with the exception that you always have to press the dead key twice to get that key alone. In "notepad" for example, you can type "test" and it will come out in quotes, but typing "elephant" will require you to press the double-quote character twice in a row. For this patch you will always have to press the key twice.

%%%

%%%Some Windows keyboard layouts have "dead keys" that you press to alter the key that follows. For example the "US (International)" keyboard layout allows you to press the double-quote key and then "e" to get an "e" with a umlaut, or the "^" then "e" to get an "e" with a circumflex. This type of layout comes in handy when you need to enter accented characters occasionally but you don't have a physical keyboard with those keys. The only downside is that you (usually) have to press that dead key twice to get the actual key (the double-quote or caret in these examples). Our current text processing does not support the entry of accented characters when these types of keyboard layouts are selected. In fact in those cases the dead character is actually swallowed up, so you can't even enter a double-quote character. This is the problem reported in bug report #33678. This patch fixes both issues. You can use dead keys to enter accented characters and you can get press the dead key twice to get that character. It works ALMOST exactly the same as other programs with the exception that you always have to press the dead key twice to get that key alone. In "notepad" for example, you can type "test" and it will come out in quotes, but typing "elephant" will require you to press the double-quote character twice in a row. For this patch you will always have to press the key twice. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Pressing the key twice if one wants any kind of quotes around a piece of text is what I consider 'normal' behaviour. Pressing twice and then go back one space with the left cursor key before typing on is just as fast and easy as remembering to press the spacebar after a quote to circumvent the 'elephant coming from Sweden' problem. ;-)%%%

%%%Pressing the key twice if one wants any kind of quotes around a piece of text is what I consider 'normal' behaviour. Pressing twice and then go back one space with the left cursor key before typing on is just as fast and easy as remembering to press the spacebar after a quote to circumvent the 'elephant coming from Sweden' problem. ;-)%%%
Author
Member

%%%If you don't compile on your own, I've made a build for you, this morning's trunk with this patch. Bare bones and just 32-bit but it should be fine for testing this input issue.

http://www.hacheson.com/files/_hidden/BlenderFix33709.zip
%%%

%%%If you don't compile on your own, I've made a build for you, this morning's trunk with this patch. Bare bones and just 32-bit but it should be fine for testing this input issue. http://www.hacheson.com/files/_hidden/BlenderFix33709.zip %%%
Author
Member

%%%"DeadKeys2.diff" has updated comments, but no functional changes from the
earlier patch. I just wanted to add better comments to help ensure the changes
aren't edited out at some later point since it isn't very obvious and it addresses
a narrow set of circumstances.
%%%

%%%"DeadKeys2.diff" has updated comments, but no functional changes from the earlier patch. I just wanted to add better comments to help ensure the changes aren't edited out at some later point since it isn't very obvious and it addresses a narrow set of circumstances. %%%

%%%Hi Harley,

I had a quick look before the start of the new years eve festivities and yes, this fix works.

Since pressing the quote key once followed by the spacebar also gives a single quote in either editor, I think double pressing the quote key should in an ideal world also deliver two quotes in the editors. You've then allmost got the normal behaviour.
Nevertheless, the way it works now is obviously allready a great improvement.%%%

%%%Hi Harley, I had a quick look before the start of the new years eve festivities and yes, this fix works. Since pressing the quote key once followed by the spacebar also gives a single quote in either editor, I think double pressing the quote key should in an ideal world also deliver two quotes in the editors. You've then allmost got the normal behaviour. Nevertheless, the way it works now is obviously allready a great improvement.%%%

%%%This patch was committed 6 months ago, so closing this tracker entry.
https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=54761%%%

%%%This patch was committed 6 months ago, so closing this tracker entry. https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=54761%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33709
No description provided.