Applying patch #33709 for dead keys on windows. Thanks Harley Acheson!